tests/ui/compound-index-unsupported.stderr
error: Unsupported index type: blah
 --> tests/ui/compound-index-unsupported.rs
  |
  |     #[cipherstash(query = "blah", compound = "email#name")]
  |                           ^^^^^^
